deploy/awx-ingressroute.yaml
# awx-ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /awx(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: awx-service
            port:
              number: 80
  # host 추가할 경우:
  # - match: Host(`your.domain.com`) && PathPrefix(`/awx`)
